--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
@@ -34,16 +36,18 @@
             <ul class="flex-nav-contact list">
                 <li class="nav-contact-item">
                     <a href="mailto:info@devstudio.com" class="link site-contact">
-                        <svg class="nav-icons" width="16" height="12"> 
-                            <use href="./images/icons.svg#icon-mail"><use>
-						</svg> info@devstudio.com
+                        <svg class="nav-icons" width="16" height="12">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                        info@devstudio.com
                     </a>
                 </li>
                 <li class="nav-contact-item">
                     <a href="tel:+380961111111" class="link site-contact">
-                        <svg class="nav-icons" width="10" height="16"> 
-                            <use href="./images/icons.svg#icon-smartphone"><use>
-						</svg> +38 096 111 11 11</a>
+                        <svg class="nav-icons" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
@@ -54,7 +58,8 @@
         <section class="hero section">
             <div class="container">
                 <h1 class="hero-title">
-                    Эффективные решения <br /> для вашего бизнеса
+                    Эффективные решения <br />
+                    для вашего бизнеса
                 </h1>
                 <button type="button" class="hero-button pointer">Заказать услугу</button>
             </div>
@@ -67,9 +72,9 @@
                 <ul class="advantages-list list">
                     <li class="advantages-item">
                         <div class="advantages-box">
-                            <svg class="advantages-icons"> 
-                            <use href="./images/icons.svg#icon-antenna"><use>
-						</svg>
+                            <svg class="advantages-icons">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
                         </div>
                         <h3 class="advantages-title">Внимание к деталям</h3>
                         <p class="advantages-text">
@@ -78,9 +83,9 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                            <svg class="advantages-icons"> 
-                            <use href="./images/icons.svg#icon-clock"><use>
-						</svg>
+                            <svg class="advantages-icons">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
                         </div>
                         <h3 class="advantages-title">Пунктуальность</h3>
                         <p class="advantages-text">
@@ -89,9 +94,9 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                            <svg class="advantages-icons"> 
-                            <use href="./images/icons.svg#icon-diagram"><use>
-						</svg>
+                            <svg class="advantages-icons">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
                         </div>
                         <h3 class="advantages-title">Планирование</h3>
                         <p class="advantages-text">
@@ -100,9 +105,9 @@
                     </li>
                     <li class="advantages-item">
                         <div class="advantages-box">
-                            <svg class="advantages-icons"> 
-                            <use href="./images/icons.svg#icon-astronaut"><use>
-						</svg>
+                            <svg class="advantages-icons">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
                         </div>
                         <h3 class="advantages-title">Современные технологии</h3>
                         <p class="advantages-text">
@@ -145,29 +150,29 @@
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-instagram"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-twitter"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-facebook"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-linkedin"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
@@ -183,29 +188,29 @@
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-instagram"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-twitter"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-facebook"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-linkedin"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
@@ -221,29 +226,29 @@
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-instagram"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-twitter"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-facebook"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-linkedin"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
@@ -258,29 +263,29 @@
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-instagram"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-twitter"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-facebook"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="list team-social">
                                     <a class="team-social-link link" href="">
                                         <svg class="team-icon" width="20" height="20">
-											<use href="./images/icons.svg#icon-linkedin"></use>
-										</svg>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
@@ -291,7 +296,6 @@
         </section>
 
         <!-- section clients -->
-        </section>
         <section class="section">
             <div class="container">
                 <h2 class="title clients-title">Постоянные клиенты</h2>
@@ -299,54 +303,56 @@
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-								<use href="./images/icons.svg#icon-logo-1"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-logo-1"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-								<use href="./images/icons.svg#icon-logo-2"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-logo-2"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-								<use href="./images/icons.svg#icon-logo-3"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-logo-3"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-								<use href="./images/icons.svg#icon-logo-4"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-logo-4"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-								<use href="./images/icons.svg#icon-logo-5"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-logo-5"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="clients-item">
                         <a class="clients-link" href="">
                             <svg class="clients-logo">
-								<use href="./images/icons.svg#icon-logo-6"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-logo-6"></use>
+                            </svg>
                         </a>
                     </li>
-
-
+                </ul>
+            </div>
+        </section>
     </main>
 
     <!-- section footer -->
     <footer class="footer">
         <div class="container footer-container">
             <div>
-                <a href="./index.html" lang="en" class="footer-logo link">Web<span class="logo-accent-footer">Studio</span>
+                <a href="./index.html" lang="en" class="footer-logo link">Web<span
+                        class="logo-accent-footer">Studio</span>
                 </a>
                 <address>
                     <ul>
@@ -367,29 +373,29 @@
                     <li>
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg#icon-instagram"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg#icon-twitter"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg#icon-facebook"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg#icon-linkedin"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
