--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,9 @@
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet" />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
@@ -18,8 +20,7 @@
     <header class="header-border">
         <div class="flex-nav container">
             <nav class="flex-nav">
-                <a href="/" lang="en" class="header-logo link">Web<span class="logo-accent">Studio</span>
-          </a>
+                <a href="/" lang="en" class="header-logo link">Web<span class="logo-accent">Studio</span></a>
                 <ul class="flex-nav-menu list">
                     <li class="nav-menu-item">
                         <a href="/" class="link site-nav-text current">Студия</a>
@@ -34,16 +35,16 @@
             <ul class="flex-nav-contact list">
                 <li class="nav-contact-item">
                     <a href="mailto:info@devstudio.com" class="link site-contact">
-                        <svg class="nav-icons" width="16" height="12"> 
-                            <use href="./images/icons.svg#icon-mail"><use>
-						</svg>
+                        <svg class="nav-icons" width="16" height="12">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
                         info@devstudio.com</a>
                 </li>
                 <li class="nav-contact-item">
                     <a href="tel:+380961111111" class="link site-contact">
-                        <svg class="nav-icons" width="10" height="16"> 
-                            <use href="./images/icons.svg#icon-smartphone"><use>
-						</svg>
+                        <svg class="nav-icons" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
                         +38 096 111 11 11</a>
                 </li>
             </ul>
@@ -68,7 +69,8 @@
                 <h2 class="visually-hidden">Примеры наших работ</h2>
                 <ul class="portfolio-examples list">
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/technocrats.jpg" alt="прооект веб-сайта на макбук про" />
+                        <a href="" class="link"><img src="./images/technocrats.jpg"
+                                alt="прооект веб-сайта на макбук про" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Технокряк</h3>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -77,7 +79,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/poster.jpg" alt="постера баскетбольной команды" width="370" />
+                        <a href="" class="link"><img src="./images/poster.jpg" alt="постера баскетбольной команды"
+                                width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">
                                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -88,7 +91,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/seafood.jpg" alt="логотип раесторана морких продуктов" width="370" />
+                        <a href="" class="link"><img src="./images/seafood.jpg"
+                                alt="логотип раесторана морких продуктов" width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
                                 <p class="portfolio-text">Приложение</p>
@@ -115,7 +119,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/inspiration.jpg" alt="проект Веб-сайта на и-мак" width="370" />
+                        <a href="" class="link"><img src="./images/inspiration.jpg" alt="проект Веб-сайта на и-мак"
+                                width="370" />
                             <div class="works-item-bottom">
                                 <h3 lang="en" class="portfolio-title">Inspiration has no Borders</h3>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -124,7 +129,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/publication.jpg" alt="журнал лимитед эдишн" width="370" />
+                        <a href="" class="link"><img src="./images/publication.jpg" alt="журнал лимитед эдишн"
+                                width="370" />
                             <div class="works-item-bottom">
                                 <h3 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h3>
                                 <p class="portfolio-text">Дизайн</p>
@@ -142,7 +148,8 @@
                     </li>
 
                     <li class="portfolio-link">
-                        <a href="" class="link"><img src="./images/growing.jpg" alt="печатает на клавиатуре" width="370" />
+                        <a href="" class="link"><img src="./images/growing.jpg" alt="печатает на клавиатуре"
+                                width="370" />
                             <div class="works-item-bottom">
                                 <h3 lang="en" class="portfolio-title">Growing Business</h3>
                                 <p class="portfolio-text">Приложение</p>
@@ -158,7 +165,8 @@
     <footer class="footer">
         <div class="container footer-container">
             <div>
-                <a href="./index.html" lang="en" class="footer-logo link">Web<span class="logo-accent-footer">Studio</span>
+                <a href="./index.html" lang="en" class="footer-logo link">Web<span
+                        class="logo-accent-footer">Studio</span>
                 </a>
                 <address>
                     <ul>
@@ -179,29 +187,29 @@
                     <li>
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg#icon-instagram"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg#icon-twitter"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg#icon-facebook"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="list footer-social">
                         <a class="footer-socials-link link" href="">
                             <svg class="footer-icon" width="20" height="20">
-								<use href="./images/icons.svg#icon-linkedin"></use>
-							</svg>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
